<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mercaderia">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="169dp"
        android:layout_height="32dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:text="@string/sal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="169dp"
        android:layout_height="32dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        android:text="@string/palta"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="169dp"
        android:layout_height="32dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:text="@string/yogurth"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="169dp"
        android:layout_height="32dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:text="@string/galletas"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="169dp"
        android:layout_height="32dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="58dp"
        android:orientation="horizontal"
        android:text="@string/queso"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="410dp"
        android:layout_height="84dp"
        android:background="@color/light_blue"
        android:fontFamily="monospace"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/mercader_aa"
        android:textAlignment="center"
        android:textColor="#0C0C0C"
        android:textDirection="locale"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-3dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="169dp"
        android:layout_height="32dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:text="@string/arroz"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="169dp"
        android:layout_height="32dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:text="@string/tallarines"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="169dp"
        android:layout_height="32dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:text="@string/leche"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="169dp"
        android:layout_height="32dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:text="@string/salsa_de_tomate"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="169dp"
        android:layout_height="32dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:text="@string/cereales"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="169dp"
        android:layout_height="32dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:text="@string/az_zar"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/button2"
        android:layout_width="217dp"
        android:layout_height="43dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#ECEBEB"
        android:text="@string/agregar_producto"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

</androidx.constraintlayout.widget.ConstraintLayout>